# pulumi-postgresql

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  CHANGELOG_OLD.md  Makefile  Makefile.github  README.md  go.mod  go.sum  resources.go
.claude/: CLAUDE.md
.config/: mise.toml
.github/: copilot-instructions.md
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main.yml  master.yml  nightly-test.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  test.yml  (+6 more)
docs/: _index.md
examples/: examples_dotnet_test.go  examples_nodejs_test.go  examples_test.go  go.mod  go.sum
patches/: 0001-fix-import-path.patch  0001-fork.patch
provider/: go.mod  go.sum  provider_program_test.go  resources.go
scripts/: go.mod  publish-plugin.sh
sdk/: go.mod  go.sum
sdk/python/: Pulumi.yaml  README.md  README.rst  go.mod  pyproject.toml  setup.py
sdk/python/pulumi_postgresql/: README.md  __init__.py  _inputs.py  _tables.py  database.py  default_privileg.py  default_privileges.py  extension.py  function.py  get_schemas.py  get_sequences.py  get_tables.py  grant.py  grant_role.py  outputs.py  physical_replication_slot.py  provider.py  publication.py  pulumi-plugin.json  replication_slot.py  role.py  schema.py  security_label.py  server.py  subscription.py  tables.py  user_mapping.py
sdk/python/pulumi_postgresql/config/: README.md  __init__.pyi  outputs.py  vars.py
testing/: docker-compose.yml
(+200 files in other folders)
