[project]
  name = "pulumi_postgresql"
  description = "A Pulumi package for creating and managing postgresql cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "postgresql"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-postgresql"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_postgresql = ["py.typed", "pulumi-plugin.json"]
